fixed card scaling on mobile m/l size

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -436,7 +436,17 @@ section img:hover + .item-title {
 	
 	.image-two {
 	
-		min-width: 140px;
+		min-width: 200px;
+	}
+	.flex-container {
+		max-width: 100vw;
+	}
+}
+@media screen and (max-width:360px) {
+	
+	.image-two {
+	
+		min-width: 200px;
 	}
 	.flex-container {
 		max-width: 100vw;
